# Build-environment

./: .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  HOW_TO  README.md  TestingModule.cmake  add-env.bat  test.sh  unit_test.cpp
libraries/hwlib/demo/arduino-due/chris/: glcd-oled-spi.hpp
modules/SHORTY/: BuildModule.cmake  CMakeLists.txt  Sources.cmake  TestModule.cmake
modules/template-arduino/: .fetch-build-environment.sh  .travis.yml  BuildModule.cmake  CMakeLists.txt  README.md  Sources.cmake  TestModule.cmake  fetch-build-environment.sh  test.bat  test.sh
modules/template-arduino/test/: test_main.cpp
modules/template-pc/: CMakeLists.txt
toolchain/targets/test/: test.cmake
